setup to postgresql as db on production env

--- a/config/database.yml
+++ b/config/database.yml
@@ -22,4 +22,7 @@ test:
 
 production:
   <<: *default
-  database: db/production.sqlite3
+  adapter: psql
+  database: yourvideos
+  username: yourvideos
+  password: <%= ENV['YOURVIDEOS_DATABASE_PASSYOURVIDEOS
