--- a/config/storage.yml
+++ b/config/storage.yml
@@ -12,7 +12,7 @@ local:
     access_key_id: <%= Rails.application.credentials.dig(:aws, :access_key_id) %>
     secret_access_key: <%= Rails.application.credentials.dig(:aws, :secret_access_key) %>
     region: sa-east-1
-    bucket: rails-storage-<%= Rails.env %>
+    bucket: rails-storage553-<%= Rails.env %>
 
 # Remember not to checkin your GCS keyfile to a repository
 # google:
